# motan-openresty-native

./: .gitignore  CMakeLists.txt  README.md  buffer.c  buffer.h  buffer_unittest.c  build_by_docker.sh  motan.h  serialization.c  serialization.h  serialization_unittest.c  test.lua  utils.c  utils.h
src/: motan.h  serialization_unittest.c
